<resources>
    <string name="app_name">Indian Agent</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="aadhaar_card">Aadhaar Card</string>
    <string name="pan_card">PAN Card</string>
    <string name="indian_passport">Indian Passport</string>
    <string name="aadhaar_pan">Link Aadhar-PAN</string>
    <string name="bill_payment">Bill Payment</string>
    <string name="download_aadhaar_card">Download Aadhaar Card</string>
    <string name="apply_new_aadhaar_card">Apply For New Aadhaar Card</string>
    <string name="check_aadhaar_status">Check Aadhaar Status</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="check_pnr_status">Check PNR Status</string>
    <string name="irctc_login">IRCTC\nLogin</string>
    <string name="train_berth_available">Train Berth Availability</string>
    <string name="trains_betwn_stations">Trains b/w\nStations</string>
    <string name="fair_enquiry">Fair\nEnquiry</string>
    <string name="nat_train_enq_system">Enquiry System</string>
    <string name="dial_139">Dial 139</string>
    <string name="sms_service">SMS Services</string>
    <string name="tatkal_service">Tatkal Service</string>
    <string name="quick_pay_bill">Quick\nPay Bills</string>
    <string name="bsnl_recharge">BSNL Recharge</string>
    <string name="bsnl_customer_care">Customer Care</string>
    <string name="bsnl_website">Proceed to Website</string>
    <string name="passport_fragment_title">Passport Hub</string>
    <string name="railway_fragment_title">Railway Services</string>
    <string name="aadhaar_subtitle">Appointment, Download, Check your Card Status.</string>
    <string name="pancard_subtitle">Apply for new PAN Card Online.</string>
    <string name="indian_passport_subtitle">NRI &amp; Indian Passport. Steps to Apply for New Passport.</string>
    <string name="link_aadhaar_pan_subtitle">Link your Aadhaar &amp; PAN Card according to Indian Govt. Rules.</string>
    <string name="bill_payment_subtitle">Electricity Bill payment with 46 Electric boards.</string>
    <string name="download_aadhaar_subtitle">Use your PIN Code to open Aadhaar Card PDF.</string>
    <string name="apply_new_aadhaar_subtitle">Book your Appointment to Apply for New Card</string>
    <string name="check_aadhaar_status_subtitle">Check your card status you recently applied for.</string>
    <string name="scan_qr_code_subtitle">Scan your Aadhaar Card and get all details</string>
    <string name="check_pnr_subtitle">You will be redirected to external link</string>
    <string name="irctc_login_subtitle">Login to Official IRCTC Website for many features</string>
    <string name="train_berth_avl_subtitle">Seating Berth Availability Between Two Stations</string>
    <string name="train_bet_station_subtitle">Trains and Fare Availability Between Two Stations</string>
    <string name="fair_enquiry_subtitle">Fare Details between two Stations of Sleeper, AC, General..</string>
    <string name="ntes_subtitle">NTES offers GPS Tracking, Stations and Train Schedule</string>
    <string name="dial_139_subtitle">Cancel Tickets, Set Destination Alarm and more | Dial 139</string>
    <string name="sms_service_subtitle">Get PNR Status, Train Arr./Dep. and Time Table on SMS</string>
    <string name="tatkal_service_subtitle">Get Tatkal Services And Updates</string>
    <string name="instruct_link_aadharpan">Details to Link your Aadhaar Card and PAN Card</string>
    <string name="instruct_1">1.PAN Card Number</string>
    <string name="instruct_2">2.Aadhaar Card Number</string>
    <string name="instruct_3">3.Name as per Aadhaar Card</string>
    <string name="instruct_4">4.Registered Mobile Number for OTP</string>
    <string name="note_1">1. Please ensure the Date of Birth, Gender and Aadhaar Number is as per Aadhaar details to proceed further.</string>
    <string name="note_2">2. If Date of Birth and Gender is fully matched and Name as per Aadhaar is not exactly matched then the user has to additionally provide Aadhaar OTP to proceed with partial name match.</string>
    <string name="note_3">3. If details are available with you, then please click the below "Proceed to Website" button.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="url">URL</string>
    <string name="btnText">Pay Electricity Bill</string>
    <string name="download_adhaar_link">https://eaadhaar.uidai.gov.in/</string>
    <string name="new_adhaar_appoinment_link">https://appointments.uidai.gov.in/</string>
    <string name="check_adhaar_status_link">https://resident.uidai.net.in/check-aadhaar-status</string>
    <string name="check_aadhaar_status_title">Check Aadhaar Status</string>
    <string name="pan_aadhaar_link">https://incometaxindiaefiling.gov.in/e-Filing/Services/LinkAadhaarHome.html</string>
    <string name="nri_passport">Generate NRI Passport</string>
    <string name="normal_passport">Generate Passport</string>
    <string name="steps_for_passport">How to Generate Passport</string>
    <string name="fee_calculator">Passport Fee Calculator</string>
    <string name="know_ur_police_station">Know Your Police Station</string>
    <string name="passposr_act_rules"><![CDATA[Act(1967& 1980)]]></string>
    <string name="passport_download_eform">Download E-Form</string>
    <string name="passport_download_print_eform">Download &amp; Print Form</string>
    <string name="NRI_passport">https://passport.gov.in/nri/Online.do</string>
    <string name="apply_online">https://portal2.passportindia.gov.in/AppOnlineProject/user/RegistrationBaseAction?request_locale=en</string>
    <string name="procedure">https://portal2.passportindia.gov.in/AppOnlineProject/online/procEFormSub</string>
    <string name="title">Title</string>
    <string name="DetailsAadharUID">UID</string>
    <string name="nri_passport_subtitle">Click to generate your NRI passport</string>
    <string name="passport_subtitle">Click to generate your passport</string>
    <string name="steps_subtitle">Detailed steps how to generate passport</string>
    <string name="calculate_subtitle">Calculate your passport fee</string>
    <string name="police_station_subtitle">Nearby police station for police verification</string>
    <string name="rules_subtitle">Acts and Rules for 1967 &amp; 1980</string>
    <string name="download_subtitle">Download application form for passport</string>
    <string name="print_subtitle">Print your passport form</string>
    <string-array name="states_array">
        <item>Andhra Pradesh (Southern-APCPDCL)</item>
        <item>Andhra Pradesh (Eastern-APEPDCL)</item>
        <item>Andhra Pradesh (North-APNPDCL)</item>
        <item>Assam</item>
        <item>Bihar (North)</item>
        <item>Bihar (South)</item>
        <item>Chhattisgarh CSPDCL</item>
        <item>Goa</item>
        <item>Gujrat (TorrentPower)</item>
        <item>Gujrat (Dakshin-GVCL)</item>
        <item>Gujrat (Paschim-GVCL)</item>
        <item>Gujrat (Uttar-GVCL)</item>
        <item>Gujrat (Madhya-GVCl)</item>
        <item>Haryana (Dakshin-HBVNL)</item>
        <item>Haryana (Uttar-HBVNL)</item>
        <item>Himachal Pradesh</item>
        <item>Jharkhand</item>
        <item>Karnataka (Hubli-ESCOM)</item>
        <item>Karnataka (Gulbarga-ESCOM)</item>
        <item>Kerala</item>
        <item>Madhya Pradesh (Paschim)</item>
        <item>Madhya Pradesh (Central)</item>
        <item>Madhya Pradesh (Poorv)</item>
        <item>Maharashtra</item>
        <item>Mumbai (Reliance)</item>
        <item>Mumbai (TATA Power)</item>
        <item>Mumbai (BEST Electric)</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Delhi (NCR-North Delhi)</item>
        <item>Delhi (Yamuna Power)</item>
        <item>Delhi (Rajdhani Power Ltd)</item>
        <item>Orissa (North Eastern)</item>
        <item>Orissa (Western)</item>
        <item>Orissa (Central)</item>
        <item>Punjab (PSPCL)</item>
        <item>Rajasthan (Jaipur-JVVNL)</item>
        <item>Rajasthan (Ajmer-AVVNL)</item>
        <item>Rajasthan (Jodhpur-JDVVNL)</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Uttar Pradesh</item>
        <item>Uttar Pradesh (Kanpur-KESC)</item>
        <item>Uttarakhand</item>
        <item>West Bengal</item>
    </string-array>
    <string name="label_name">Name</string>
    <string name="label_uid">UID</string>
    <string name="label_gender">GENDER</string>
    <string name="label_yob">YEAR OF BIRTH</string>
    <string name="label_co">CARE OF</string>
    <string name="label_vtc">VILLAGE TEHSIL</string>
    <string name="label_po">POST OFFICE</string>
    <string name="label_dist">DISTRICT</string>
    <string name="label_state">STATE</string>
    <string name="label_pc">POSTAL CODE</string>
    <string name="policy_heading">Privacy Policy</string>
    <string name="para_1"><![CDATA[Indian Agent provides information (including Indian Government Forms, Registration Forms). This is done to help us provide our Users with the best customer service and with valuable information regarding relevant Indian Government services.]]></string>
    <string name="para_2"><![CDATA[Indian Agent is dedicated to not to extract any personal information of Users using the app. Thus no personal information as well as related requests will be extracted in accordance with Indian Agent standards for integrity and objectivity.]]></string>
    <string name="para_3"><![CDATA[Indian Agent does not place any cookies into your mobile when you traverse through our content. These cookies are placed to keep track of some of the web searches, clicks, and site/section visits you make while on our sites, and to use that information anonymously to customize the content displayed to you on Indian Agent app. No information is used to identify you personally. This app keeps only motive to provide or help users to know or use Indian Government Services.]]></string>
</resources>